# worldomonation.blog

./: .gitignore  CNAME  Gemfile  README.md  _config.yml  eleventy.config.js  index.html  package-lock.json  package.json
.hooks/: pre-push
_includes/: postbox.html
_layouts/: default.html  image_post.html  page.html  post.html  post_non_card.html
_pages/: about.md  blog.md  gear.md
_posts/: 2020-09-29-pike-street-market.md  2020-10-02-laika-at-1.md  2020-10-07-wildfire-smoke.md  2020-10-08-cutting-through-clouds.md  2020-10-12-hi-speed.md  2020-10-15-revolver.md  2020-10-17-leetcode-find-n-unique-integers-sum-up-to-zero.md  2020-10-26-comet-neowise.md  2020-11-02-homescreen-2020-11-02.md  2020-11-02-homescreen.md  2020-11-04-healthcare-in-british-columbia.md  2020-11-05-leetcode-first-unique-character-in-string.md  2020-11-13-cloud-break.md  2020-11-23-leica-m4-canon-sonnar-15.md  2020-12-06-mundy-park.md  2020-12-09-beetle.md  2020-12-16-automattic-journey-1.md  2020-12-18-homescreen-2020-12-18.md  2020-12-28-automattic-journey-2.md  2021-01-02-happy-new-year.md  2021-01-07-automattic-swag.md  2021-01-16-path.md  2021-01-17-firefox-local-startpage.md  2021-02-17-brothers.md  2021-02-24-keycaps-swap.md  2021-03-04-keyboard-iris-v4.md  2021-03-08-keyboard-iris-shiba-keycaps.md  2021-03-24-migrating-end-to-end-tests-to-playwright.md  2021-03-24-migrating-selenium-to-playwright.md  2021-04-28-leica-m4.md  2021-11-06-wrx-sti.md  2021-11-18-mirror-image.md  2022-01-11-droplets.md
scripts/python/: image_gallery.py  insert_exif.py  pyproject.toml  repo.py  strip_exif.py
(+12 files in other folders)
