[tool.poetry]
name = "worldomonation.blog"
version = "0.0.1"
description = ""
authors = ["Edwin Takahashi <egao@outlook.com>"]

[tool.poetry.dependencies]
python = "3.8"
git-py = "^1.0.2"
mdutils = "^1.3.0"
virtualenv = "^20.4.2"
PyExifTool = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
